--- a/v2/config.jsonc
+++ b/v2/config.jsonc
@@ -121,8 +121,8 @@
     },
     
     "memory": {
-        "format": "󰍛 {percentage}%",
-        "format-alt": "󰍛 {used:0.1f}G",
+        "format": "󰘚 {percentage}%",
+        "format-alt": "󰘚 {used:0.1f}G",
         "interval": 3,
         "on-click-right": "uwsm-app -- kitty --class io_monitor.sh -e $HOME/user_scripts/drives/io_monitor.sh",
         "tooltip-format": "RAM: {used:0.2f} GiB / {total:0.2f} GiB ({percentage}%)\nAvailable: {avail:0.2f} GiB\nSwap: {swapUsed:0.2f} GiB / {swapTotal:0.2f} GiB\n\nRMB: I/O Monitor",
