--- a/v1/config.jsonc
+++ b/v1/config.jsonc
@@ -37,8 +37,10 @@
             "active": "󰮯",
             "default": "󰊠",
             "persistent": "󰊠"
-        }
-    },
+        },
+    	"on-scroll-up": "hyprctl dispatch workspace e-1",
+    "on-scroll-down": "hyprctl dispatch workspace e+1"
+  },
     
     "mpris": {
       "format": "{player_icon} {title}",
